<resources>
    <string name="app_name">VolleyballClient</string>
    <string name="enroll_a_friend">Enroll a friend</string>
    <string name="name">Name</string>
    <string name="enrollbtn">Enroll</string>
    <string name="enroll_myself">Enroll Myself</string>
    <string name="button">dds</string>
    <string name="back_button">Back</string>
    <string name="success">SUCCESS</string>
    <string name="fail">FAIL</string>
    <string name="sending">Sending...</string>
    <string name="update">Update</string>
    <string name="send">send</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="btn_edit_my_data">Edit My Data</string>
    <string name="btn_pass">Enter</string>
    <string name="ofir_shapira_omri_zaiman"><![CDATA[Ofir Shapira & Omri Zaiman]]></string>
    <string name="title_activity_menu_nevigation">MenuNevigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="server_ip">176.230.142.</string>
    <string name="server_port">2019</string>
    <string name="register">register</string>
    >>>>>>> 33f5c573147f134453cbd64dacb6b05bbc5d8329
</resources>
