<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <Button
        android:id="@+id/btnEnrMyself"
        android:layout_width="180dp"
        android:layout_height="131dp"
        android:layout_marginTop="136dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/enroll_myself"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEnrFriend"
        android:layout_width="180dp"
        android:layout_height="131dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/enroll_a_friend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEnrMyself"
        app:layout_constraintVertical_bias="0.398" />

    <Button
        android:id="@+id/btnEditData"
        android:layout_width="259dp"
        android:layout_height="49dp"
        android:background="#050505"
        android:shadowColor="@android:color/holo_red_dark"
        android:text="@string/btn_edit_my_data"
        android:textAllCaps="true"
        android:textColor="#FAF6F6"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEnrFriend"
        app:layout_constraintVertical_bias="0.536" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/ofir_shapira_omri_zaiman"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>